New pages added

--- a/Third-Party-Auth-Website/pages/Account.html
+++ b/Third-Party-Auth-Website/pages/Account.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login Page</title>
+    <title>Account Page</title>
 
     <link
       rel="stylesheet"
@@ -38,14 +38,6 @@
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
               <a class="nav-link" href="./../index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./login.html">Login</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./create_account.html"
-                >Create Account</a
-              >
             </li>
           </ul>
         </div>
