--- a/Third-Party-Auth-Website/index.html
+++ b/Third-Party-Auth-Website/index.html
@@ -23,7 +23,9 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="./img/icons8-lock.png" /></a>
+        <a class="navbar-brand" href="./index.html"
+          ><img src="./img/icons8-lock.png"
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -35,13 +37,15 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Login</a>
+              <a class="nav-link" href="./pages/login.html">Login</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Create Account</a>
+              <a class="nav-link" href="./pages/create_account.html"
+                >Create Account</a
+              >
             </li>
           </ul>
         </div>
@@ -91,7 +95,7 @@
     >
       <div class="row welcome text-center">
         <div class="col-12">
-          <h1 class="display-4">Built with ease.</h1>
+          <h1 class="display-4">Built with Security & Comfort.</h1>
         </div>
         <hr />
         <div class="col-12">
