--- a/Third-Party-Auth-Website/index.html
+++ b/Third-Party-Auth-Website/index.html
@@ -34,6 +34,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
+        <h2>Third Party Authentication System</h2>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
