--- a/Third-Party-Auth-Website/pages/Account.html
+++ b/Third-Party-Auth-Website/pages/Account.html
@@ -26,7 +26,7 @@
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="./../index.html"
           ><img src="./../img/icons8-lock.png"
         /></a>
         <button
@@ -37,6 +37,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
+        <h2 style="color: #fafafa">Third Party Authentication System</h2>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
