--- a/Third-Party-Auth-Website/index.html
+++ b/Third-Party-Auth-Website/index.html
@@ -48,6 +48,11 @@
                 >Create Account</a
               >
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/org.html"
+                >Organization Account</a
+              >
+            </li>
           </ul>
         </div>
       </div>
@@ -110,7 +115,7 @@
       <div
         class="container-fluid padding"
         data-aos="fade-up"
-        data-aos-offset="200"
+        data-aos-offset="100"
         data-aos-delay="50"
         data-aos-duration="1000"
       >
