--- a/Third-Party-Auth-Website/pages/create_account.html
+++ b/Third-Party-Auth-Website/pages/create_account.html
@@ -5,17 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign Up Page</title>
+    <link rel="icon" href="../img/icons8-lock.png" />
 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     />
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-    <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -40,13 +37,13 @@
         <h2 style="color: #fafafa">Third Party Authentication System</h2>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="./../index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./login.html">Login</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="./create_account.html"
                 >Create Account</a
               >
@@ -57,7 +54,7 @@
     </nav>
 
     <div style="background-color: white">
-      <div class="d-flex">
+      <div class="d-flex row">
         <!-- First Half -->
         <div class="col-md-6 align-items-center justify-content-center">
           <!-- <div
@@ -68,13 +65,14 @@
             style="
               height: 100%;
               background-position: center;
+              width: 100%;
               background-repeat: no-repeat;
               background-size: cover;
             "
             src="../img/main_wall_3.png"
           />
           <div class="carousel-caption">
-            <h1>Security is the main lock for your digital data</h1>
+            <h2>Security is the main lock for your digital data</h2>
           </div>
           <!-- </div> -->
         </div>
@@ -168,6 +166,10 @@
     <script>
       AOS.init();
     </script>
+    <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="../js/camera.js"></script>
   </body>
 </html>
