--- a/Third-Party-Auth-Website/pages/login.html
+++ b/Third-Party-Auth-Website/pages/login.html
@@ -5,17 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login Page</title>
+    <link rel="icon" href="../img/icons8-lock.png" />
 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     />
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-    <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -40,10 +36,10 @@
         <h2 style="color: #fafafa">Third Party Authentication System</h2>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="./../index.html">Home</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="./login.html">Login</a>
             </li>
             <li class="nav-item">
@@ -55,88 +51,78 @@
         </div>
       </div>
     </nav>
-    <div style="background-color: white">
-      <div class="d-flex">
-        <!-- First Half -->
-        <div class="col-md-6 align-items-center justify-content-center">
-          <!-- <div
+    <div class="d-flex row" style="background-color: white">
+      <!-- First Half -->
+      <div class="col-md-6 align-items-center justify-content-center">
+        <!-- <div
           class="d-md-flex align-items-center text-center justify-content-center"
         > -->
-          <img
-            class="image"
-            style="
-              height: 100%;
-              background-position: center;
-              background-repeat: no-repeat;
-              background-size: cover;
-            "
-            src="../img/main_wall_3.png"
-          />
-          <div class="carousel-caption">
-            <h1>Security is the main lock for your digital data</h1>
-          </div>
-          <!-- </div> -->
+        <img
+          class="image"
+          style="
+            height: 100%;
+            width: 100%;
+            background-position: fixed;
+            background-repeat: no-repeat;
+            background-size: cover;
+          "
+          src="../img/main_wall_3.png"
+        />
+        <div class="carousel-caption">
+          <h2>Security is the main lock for your digital data</h2>
         </div>
+        <!-- </div> -->
+      </div>
 
-        <!-- Second Half -->
+      <!-- Second Half -->
+      <div class="col-md-6 align-items-center justify-content-center bg-white">
         <div
-          class="col-md-6 align-items-center justify-content-center bg-white"
-          style="background-position: center"
+          id="Login_box"
+          style="display: grid; justify-content: center; align-items: center"
         >
+          <h1 style="padding-top: 20px; text-align: center">Sign In</h1>
+          <input type="email" placeholder="Email" />
           <div
-            id="Login_box"
-            style="display: grid; justify-content: center; align-items: center"
+            style="background-color: #fafafa; border-radius: 5px; padding: 5px"
           >
-            <h1 style="padding-top: 20px; text-align: center">Sign In</h1>
-            <input type="email" placeholder="Email" />
-            <div
+            <div>
+              <button id="start-camera">Start Camera</button>
+              <video id="video" width="160" height="120" autoplay></video>
+            </div>
+            <div>
+              <button id="click-photo">Click Photo</button>
+              <canvas id="canvas" width="160" height="120"></canvas>
+            </div>
+          </div>
+          <input type="password" placeholder="Password (Optional) " />
+          <div style="text-align: center">
+            <button
+              id="Loginbutton"
+              class="ripple2"
               style="
-                background-color: #fafafa;
+                background-color: #35e0d5;
                 border-radius: 5px;
-                padding: 5px;
+                color: #fafafa;
               "
             >
-              <div>
-                <button id="start-camera">Start Camera</button>
-                <video id="video" width="160" height="120" autoplay></video>
-              </div>
-              <div>
-                <button id="click-photo">Click Photo</button>
-                <canvas id="canvas" width="160" height="120"></canvas>
-              </div>
-            </div>
-            <input type="password" placeholder="Password (Optional) " />
-            <div style="text-align: center">
-              <button
-                id="Loginbutton"
-                class="ripple2"
-                style="
-                  background-color: #35e0d5;
-                  border-radius: 5px;
-                  color: #fafafa;
-                "
-              >
-                <a href="../pages/Account.html" style="color: #fafafa">
-                  Login
-                </a>
-              </button>
-            </div>
-            <h5 style="text-align: center">OR</h5>
-            <div style="text-align: center">
-              <button
-                id="CreateAbutton"
-                class="ripple2"
-                style="
-                  background-color: #4e61cd;
-                  border-radius: 5px;
-                  color: #fafafa;
-                "
-              >
-                <a href="../pages/create_account.html" style="color: #fafafa">
-                  Create New Account
-                </a>
-              </button>
-            </div>
+              <a href="../pages/Account.html" style="color: #fafafa"> Login </a>
+            </button>
+          </div>
+          <h5 style="text-align: center">OR</h5>
+          <div style="text-align: center">
+            <button
+              id="CreateAbutton"
+              class="ripple2"
+              style="
+                background-color: #4e61cd;
+                border-radius: 5px;
+                color: #fafafa;
+              "
+            >
+              <a href="../pages/create_account.html" style="color: #fafafa">
+                Create New Account
+              </a>
+            </button>
           </div>
         </div>
       </div>
@@ -164,6 +150,10 @@
     <script>
       AOS.init();
     </script>
+    <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="../js/camera.js"></script>
   </body>
 </html>
