--- a/Third-Party-Auth-Website/pages/org.html
+++ b/Third-Party-Auth-Website/pages/org.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign Up Page</title>
-
+    <link rel="icon" href="../img/icons8-lock.png" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link
       rel="stylesheet"
@@ -40,8 +40,11 @@
         <h2 style="color: #fafafa">Third Party Authentication System</h2>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="./../index.html">Home</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="./org.html">Organization</a>
             </li>
           </ul>
         </div>
@@ -49,7 +52,7 @@
     </nav>
 
     <div style="background-color: white">
-      <div class="d-flex">
+      <div class="d-flex row">
         <!-- First Half -->
         <div class="col-md-6 align-items-center justify-content-center">
           <!-- <div
@@ -59,6 +62,8 @@
             class="image"
             style="
               height: 100%;
+              width: 100%;
+
               background-position: center;
               background-repeat: no-repeat;
               background-size: cover;
@@ -77,7 +82,7 @@
           style="background-position: center"
         >
           <div
-            id="Signup_box"
+            id="Login_box"
             style="display: grid; justify-content: center; align-items: center"
           >
             <h1 style="padding-top: 20px; text-align: center">Org Sign Up</h1>
