--- a/Third-Party-Auth-Website/pages/Account.html
+++ b/Third-Party-Auth-Website/pages/Account.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Account Page</title>
+    <style>
+      table,
+      th,
+      td {
+        border: 1px solid black;
+      }
+    </style>
     <link rel="icon" href="../img/icons8-lock.png" />
 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -52,9 +59,38 @@
         <!-- First Half -->
         <div class="col-md-6 align-items-center justify-content-center">
           <div
-            class="d-md-flex align-items-center text-center justify-content-center"
+            class="d-md-flex-col align-items-center text-center justify-content-center col"
           >
-            <h5 text-align: center;>Login History</h5>
+            <div>
+              <h3 text-align: center;>Login History</h3>
+            </div>
+            <table
+              style="
+                flex: 1;
+                justify-content: center;
+                align-items: center;
+                align-self: center;
+              "
+            >
+              <tr>
+                <th>Organization Name</th>
+                <th>Organization Website</th>
+                <th>Date of Login</th>
+                <th>Action (block/unblock)</th>
+              </tr>
+              <tr>
+                <td>E-Store</td>
+                <td>estore.com</td>
+                <td>22-02-2022</td>
+                <td>Block</td>
+              </tr>
+              <tr>
+                <td>Google</td>
+                <td>Google.com</td>
+                <td>22-02-2022</td>
+                <td>Block</td>
+              </tr>
+            </table>
           </div>
         </div>
 
