--- a/Third-Party-Auth-Website/pages/org.html
+++ b/Third-Party-Auth-Website/pages/org.html
@@ -87,7 +87,7 @@
           >
             <h1 style="padding-top: 20px; text-align: center">Org Sign Up</h1>
             <input type="name" placeholder="Name" />
-            <input type="email" placeholder="Email" />
+            <input type="website_address" placeholder="Website Address" />
             <input type="phone" placeholder="Phone No (Optional)" />
             <div style="text-align: center">
               <button
