--- a/third-party-auth-react/public/index.html
+++ b/third-party-auth-react/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/final_default.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -27,7 +27,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <title>Third Party Auth System</title>
+    <title>Third-Party Auth System</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
